<?xml version="1.0"?>
<package format="2">
  <name>rqt_rosparam</name>
  <version>0.0.0</version>
  <description>The rqt_rosparam package, used to view and edit ROS parameter server items</description>
  <maintainer email="michal@robots.ox.ac.uk">Michal Staniaszek</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
